Fixed icon alignment (#39)
* Fixed icon alignment
* Fix overlay width and height
* Update version

--- a/css/timed-dialog.css
+++ b/css/timed-dialog.css
@@ -1,5 +1,5 @@
 /**
- * jQuery Timed Dialog Plugin stylesheet
+ * jQuery Timed Dialog Plugin style sheet
  * Author: Armino Popp, <devel@boioiong.com>
  */
 .timed-dialog-overlay {
@@ -29,7 +29,6 @@ button {
     align-items: center;
     background-color: #1055aa;
     color: white;
-    line-height: 1.2rem;
     padding: 5px 10px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px; }
